changed bg-color; added images

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="/static/img1" src="">
+        <img class="img1" src="/static/dice1.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="/static/img2" src="">
+        <img class="img2" src="/static/dice2.png">
       </div>
 
     </div>
@@ -28,6 +28,6 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    www 🎲 adada 🎲 tech
   </footer>
 </html>
