--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>The Dice Game</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Handlee&family=Poppins:wght@200&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -14,17 +16,17 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="/static/dice1.png">
+        <img class="img1" src="/static/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="/static/dice2.png">
+        <img class="img2" src="/static/dice6.png">
       </div>
 
     </div>
 
-
+  <script src="index.js" charset='utf-8'></script>
   </body>
 
   <footer>
